k8s/manifests/infrastructure/inventory-service-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inventory-service-db
  name: inventory-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service-db
  template:
    metadata:
      labels:
        app: inventory-service-db
    spec:
      containers:
        - image: postgres:latest
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
              - mountPath: /var/lib/postgres
                name: inventory-service-db-data
      volumes:
        - name: inventory-service-db-data
          persistentVolumeClaim:
            claimName: inventory-service-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventory-service-db
  name: inventory-service-db
spec:
  ports:
    - port: 5442  # зовнішній порт всередині кластера => kubectl port-forward svc/order-service-db 5442:5442
      targetPort: 5432 # порт у контейнері
      protocol: TCP
  selector:
    app: inventory-service-db
  type: ClusterIP
