k8s/manifests/infrastructure/order-service-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-service-db
  name: order-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service-db
  template:
    metadata:
      labels:
        app: order-service-db
    spec:
      containers:
        - image: postgres:latest
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
              - mountPath: /var/lib/postgres
                name: order-service-db-data
      volumes:
        - name: order-service-db-data
          persistentVolumeClaim:
            claimName: order-service-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-service-db
  name: order-service-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: order-service-db
  type: ClusterIP
